static/styles/_notifications.sass
.notifications-container
  --notifications-min-height: 420px

  background-color: var(--notifications-background)
  max-height: calc(100vh - var(--header-height) - var(--footer-height))
  min-height: calc(100vh - var(--header-height) - var(--footer-height))
  position: fixed
  right: 0
  top: var(--header-height)
  width: 100vw
  z-index: var(--zindex-popover)

  +media-tablet
    border-radius: var(--border-radius-lg)
    box-shadow: var(--box-shadow-lg), var(--box-shadow-lg)
    max-width: 680px
    min-height: var(--notifications-min-height)
    position: absolute
    right: 2.5rem
    top: 4.5rem
    width: 45vw

    &:before
      background-color: var(--notifications-background)
      border: var(--border-width) var(--notifications-background) solid
      border-radius: var(--border-radius-sm)
      content: ''
      display: block
      height: $spacer
      position: absolute
      right: $spacer * 3.333
      top: ($spacer * -1) / 2
      transform: rotate(45deg)
      width: $spacer

  &.active
    display: block

.notifications-header
  align-items: center
  border-bottom: var(--border-width) solid var(--background-primary)
  display: flex
  justify-content: space-between

  a, span
    +padding(3)
    color: var(--text-secondary)


.notifications-content
  max-height: calc(100vh - var(--header-height) - var(--footer-height))
  min-height: calc(var(--notifications-min-height) - 120px)
  overflow-y: auto
  -webkit-overflow-scrolling: touch

  +media-tablet
    max-height: 47vh

  > ul
    +list-unstyled
    +padding(3, x)
    +padding(3, bottom)

  .profile-avatar img,
  .notifications-preview
    max-height: 48px
    max-width: 48px

  .activity-list-item
    font-size: var(--font-size-base)

  .activity-list-item-icon i
    position: relative
    top: 3px


.notification-item
  +padding(2, y)
  align-items: center
  display: flex

  .profile-avatar
    background-color: var(--background-tertiary)
    margin: unset


.notification-text
  +padding(3, left)
  align-self: center
  color: var(--text-secondary)
  line-height: 1.3rem

  a
    +padding(1, right)
    color: var(--text-primary)
    font-weight: var(--font-weight-bold)

  span
    +padding(1, right)

  .time-since
    +padding(1, left)
    color: var(--text-tertiary)


.notification-action
  +padding(3, left)
  margin-left: auto


.notifications-preview
  border: solid var(--border-width) var(--border-color)
  border-radius: var(--border-radius-lg)


.notifications-toggle
  +margin(2, right)
  position: relative

  // Count label.
  &:after
    +media-tablet
      left: 1.5rem
      top: 0

    align-items: center
    background-color: var(--color-danger)
    border-radius: var(--border-radius)
    color: var(--background-page)
    content: attr(data-notifications-count)
    display: none
    font-size: .7rem
    font-weight: 600
    justify-content: center
    left: 2.5rem
    min-width: 1.25rem
    padding: 3px 5px 1px
    position: absolute
    top: 1rem
    transition: transform 250ms ease-in-out
    width: fit-content

  &.has-notifications
    &:after
      display: flex
      opacity: 1

.notifications-empty
  +padding(3)
  color: var(--text-secondary)

